# Course_Work_3

./: README.md  main.py  operation.py  pyproject.toml
Pack/: functions.py  funtions.py
tests/: conftest.py  test.json  test_functions.py
